--- a/bai-tap/link-image/css/style.css
+++ b/bai-tap/link-image/css/style.css
@@ -1,5 +1,8 @@
 	* {
 		font-family: Arial;
+	}
+
+	#layout {
 		max-width: 1000px;
 	}
 
@@ -16,6 +19,10 @@
 
 	#item1 {
 		width: 300px;
+	}
+
+	img {
+		width: 100%;
 	}
 
 	.item-image {
