--- a/bai-tap/heart-animation/css/style.css
+++ b/bai-tap/heart-animation/css/style.css
@@ -5,18 +5,18 @@
 
 img {
 	max-width: 50%;
-	animation: heartbeat 3s ease-in-out infinite;
+	animation: heartbeat 2.5s ease-in-out infinite;
 	position: relative;
 }
 
 @keyframes heartbeat {
 	0% { transform: scale(1); }
-	10% { transform: scale(1.3); }
-	20% { transform: scale(1); }
-	30% { transform: scale(1.3); }
-	40%, 50% { transform: scale(1); }
-	60% { transform: scale(1.3); }
-	70% { transform: scale(1); }
-	80% { transform: scale(1.3); }
-	90%, 100% { transform: scale(1); }
+	7.5% { transform: scale(1.3); }
+	15% { transform: scale(1); }
+	22.5% { transform: scale(1.3); }
+	30%, 40%, 50% { transform: scale(1); }
+	57.5% { transform: scale(1.3); }
+	65% { transform: scale(1); }
+	72.5% { transform: scale(1.3); }
+	80%, 90%, 100% { transform: scale(1); }
 }
