--- a/bai-tap/animated-card3/css/style.css
+++ b/bai-tap/animated-card3/css/style.css
@@ -1,8 +1,15 @@
 body {
 	width: 100%;
-	height: 100vh;
-	background-image: url(../image/background.png);
-	background-size: cover;
-	background-repeat: no-repeat;
+	background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 	margin: 0;
+}
+
+.rotate360 {
+	animation: rotate360 3s linear infinite;
+	animation-fill-mode: both;
+}
+
+@keyframes rotate360 {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
 }
