--- a/bai-tap/animated-card3/css/style.css
+++ b/bai-tap/animated-card3/css/style.css
@@ -24,10 +24,19 @@ body {
 
 #star {
 	width: 100%;
-}
-#rotate360 {
-	animation: rotate 4s linear infinite;
+	animation: opcs 1.5s ease-in;
 	animation-fill-mode: both;
+}
+
+#rotate360 {
+	animation: rotate 3s 0.8s linear infinite;
+	animation-fill-mode: both;
+}
+
+@keyframes opcs {
+	0% { opacity: 0; transform: scale(1); }
+	50% { opacity: 1; transform: scale(1.3); }
+	100% { opacity: 1; transform: scale(1); }
 }
 
 @keyframes rotate {
