--- a/bai-tap/food-store-3/css/style.css
+++ b/bai-tap/food-store-3/css/style.css
@@ -1,17 +1,73 @@
-#main-nav-bar {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 2fr 1fr 1fr 1fr;
-	justify-items: center;
-	padding: 15px;
+* {
+	box-sizing: border-box;
+	font-family: Noto Sans;
+}
+
+body {
 	margin: 0;
+}
+
+#main-nav-bar {
+	padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    background: #f7f7f7;
+    box-shadow: 0px 0px 3px 0px #ddd;
 }
 
 #main-nav-bar li {
 	list-style-type: none;
-	padding: 15px;
+    position: relative;
 }
 
 #main-nav-bar a {
 	text-decoration: none;
-	color: #646466;
+    color: #000;
+    line-height: 76px;
+    padding: 27px;
+    cursor: pointer;
+}
+
+#main-nav-bar a:hover {
+	color: #fcb55a;
+}
+
+#main-nav-bar img {
+	max-width: 100%;
+	height: 100%;
+	display: block;
+    padding: 0 130px 0 130px;
+}
+
+#sub-nav-bar {
+	padding: 0;
+	position: absolute;
+	display: none;
+	box-shadow: 0px 0px 3px 0px #ddd;
+}
+
+#sub-nav-bar li {
+	margin: 0;
+}
+
+#sub-nav-bar a {
+	display: block;
+	text-decoration: none;
+    color: #000;
+    background-color: #f7f7f7;
+    line-height: normal;
+}
+
+#dropdown-sub-nav {
+	display: inline-block;
+}
+
+#main-nav-bar li:hover #sub-nav-bar {
+	display: block;
+}
+
+
+#sub-nav-bar a:hover {
+	color: #fcb55a;
 }
