--- a/bai-tap/food-store-3/css/style.css
+++ b/bai-tap/food-store-3/css/style.css
@@ -25,12 +25,14 @@ body {
 	text-decoration: none;
     color: #000;
     line-height: 76px;
-    padding: 27px;
+    padding: 25px;
     cursor: pointer;
+    transition: color 0.3s ease;
 }
 
 #main-nav-bar a:hover {
 	color: #fcb55a;
+	border-bottom: 2px solid #fcb55a;
 }
 
 #main-nav-bar img {
@@ -57,6 +59,7 @@ body {
     color: #000;
     background-color: #f7f7f7;
     line-height: normal;
+    transition: color 0.3s ease;
 }
 
 #dropdown-sub-nav {
@@ -70,4 +73,9 @@ body {
 
 #sub-nav-bar a:hover {
 	color: #fcb55a;
+	border: 0;
+}
+
+h1 {
+	display: none;
 }
