--- a/bai-tap/food-store-3/css/style.css
+++ b/bai-tap/food-store-3/css/style.css
@@ -1,6 +1,6 @@
 * {
 	box-sizing: border-box;
-	font-family: Noto Sans;
+	font-family: Roboto, san serif;
 }
 
 body {
@@ -12,7 +12,7 @@ body {
     margin: 0;
     display: flex;
     justify-content: center;
-    background: #f7f7f7;
+    background-color: #f7f7f7;
     box-shadow: 0px 0px 3px 0px #ddd;
 }
 
@@ -25,9 +25,11 @@ body {
 	text-decoration: none;
     color: #000;
     line-height: 76px;
-    padding: 25px;
+    padding: 24px;
     cursor: pointer;
     transition: color 0.3s ease;
+    font-weight: bold;
+    text-transform: capitalize;
 }
 
 #main-nav-bar a:hover {
@@ -39,7 +41,6 @@ body {
 	max-width: 100%;
 	height: 100%;
 	display: block;
-    padding: 0 130px 0 130px;
 }
 
 #sub-nav-bar {
@@ -47,6 +48,7 @@ body {
 	position: absolute;
 	display: none;
 	box-shadow: 0px 0px 3px 0px #ddd;
+	z-index: 30;
 }
 
 #sub-nav-bar li {
@@ -60,6 +62,9 @@ body {
     background-color: #f7f7f7;
     line-height: normal;
     transition: color 0.3s ease;
+    padding: 24px;
+    font-weight: bold;
+    text-transform: capitalize;
 }
 
 #dropdown-sub-nav {
@@ -76,6 +81,83 @@ body {
 	border: 0;
 }
 
-h1 {
-	display: none;
+#none-a {
+	text-decoration: none !important;
+    line-height: 0 !important;
+    padding: 0 !important;
+    cursor: pointer;
+    margin: 0 95px 0 95px !important;
+}
+
+#none-a:hover {
+	border: 0 !important;
+}
+
+#banner {
+	background-image: url("../img/banner.jpg");
+	width: 100%;
+	height: 462px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+	z-index: 0;
+}
+
+#banner-text {
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
+}
+
+#banner-text h1 {
+	font-size: 4em;
+}
+
+#banner-text h3 {
+	font-size: 1.5em;
+}
+
+#banner-text button {
+	text-decoration: none;
+	color: black;
+	font-size: 16px;
+	font-weight: bold;
+	position: relative;
+	overflow: hidden;
+	margin-top: 15px;
+	border: 2px solid #DFE0DF; 
+	background-color: #f7f7f7;
+	padding: 15px 30px;
+	border-radius: 10px;
+	cursor: pointer;
+}
+
+#banner-text button::before {
+	content: "";
+	position: absolute;
+	width: 50px;
+	height: 90px;
+	background-color: #ffcf79;
+	top: -15px;
+	left: -60px;
+	transform: rotate(10deg);
+	transition: 0.5s ease;
+}
+
+#banner-text button:hover::before {
+	transform: translateX(200px) rotate(10deg);
+}
+
+#container {
+	max-width: 1000px;
+	margin: auto;
+}
+
+#feature-heading {
+	text-align: center;
+	font-size: 2.5em;
 }
