--- a/bai-tap/food-store-3/css/style.css
+++ b/bai-tap/food-store-3/css/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
+
+
 * {
 	box-sizing: border-box;
-	font-family: Roboto, san serif;
+	font-family: Noto Sans;
 }
 
 body {
@@ -136,7 +139,12 @@ body {
 	cursor: pointer;
 }
 
-#banner-text button::before {
+#banner-text button:hover {
+	background-color: #fcb55a;
+	color: white;
+}
+
+/*#banner-text button::before {
 	content: "";
 	position: absolute;
 	width: 50px;
@@ -150,7 +158,7 @@ body {
 
 #banner-text button:hover::before {
 	transform: translateX(200px) rotate(10deg);
-}
+}*/
 
 #container {
 	max-width: 1000px;
