--- a/bai-tap/food-store-3/css/style.css
+++ b/bai-tap/food-store-3/css/style.css
@@ -137,6 +137,7 @@ body {
 	padding: 15px 30px;
 	border-radius: 10px;
 	cursor: pointer;
+	transition: background-color 0.3s ease;
 }
 
 #banner-text button:hover {
