--- a/onlab/test1/css/style.css
+++ b/onlab/test1/css/style.css
@@ -6,8 +6,7 @@
 }
 
 body {
-    background: url(../img/background-1.png);
-    background-size: 100vh;
+    background-color: #FFA700;
 }
 
 h1 {
@@ -19,6 +18,7 @@ h1 {
 #container {
     max-width: 1200px;
     margin: auto;
+    padding-top: 100px;
 }
 
 .row {
@@ -35,6 +35,7 @@ h1 {
 .item img {
     display: block;
     transition: 0.3s ease;
+    width: 100%;
 }
 
 .image {
@@ -74,4 +75,17 @@ h1 {
 
 .item:hover .image img {
     transform: translateY(-10px);
+}
+
+@media only screen and (max-width: 1000px) {
+    .row {
+    display: flex;
+    flex-direction: column;
+    }
+
+    #container {
+    max-width: 600px;
+    margin: auto;
+    padding: 20px;
+    }
 }
