--- a/onlab/test1/css/style.css
+++ b/onlab/test1/css/style.css
@@ -85,7 +85,7 @@ h1 {
 }
 
 @media only screen and (max-width: 1000px) {
-    .row {
+    #row1, #row2 {
     display: flex;
     flex-direction: column;
     }
