--- a/dom-projects/dom-basics/style.css
+++ b/dom-projects/dom-basics/style.css
@@ -7,6 +7,8 @@ h2 {
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 10px;
     justify-content: space-around;
+    width: 80%;
+    margin: auto;
 }
 
 #main-function p {
@@ -17,7 +19,7 @@ h2 {
 }
 
 #main-function p button {
-    width: 100px;
+    max-width: 100%;
     margin: auto;
 }
 
@@ -26,6 +28,8 @@ h2 {
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 10px;
     justify-content: space-around;
+    width: 80%;
+    margin: auto;
 }
 
 #optional p {
@@ -35,18 +39,18 @@ h2 {
 }
 
 #optional p button, input, select {
-    width: 100px;
+    max-width: 100%;
     margin: auto;
 }
 
 .optional-1-and-2 input {
-    width: 150px;
+    max-width: 100%;
 }
 
 #optional-3 select {
-    width: 150px;
+    max-width: 100%;
 }
 
 #optional-4 input {
-    width: 165px;
+    max-width: 100%;
 }
