--- a/dom-projects/dom-basics/style.css
+++ b/dom-projects/dom-basics/style.css
@@ -51,6 +51,10 @@ h2 {
     max-width: 100%;
 }
 
+#optional-3 label {
+    text-align: center;
+}
+
 #optional-4 input {
     width: 160px;
     max-width: 100%;
