--- a/dom-projects/calculator-basics/style1.css
+++ b/dom-projects/calculator-basics/style1.css
@@ -8,6 +8,15 @@
     src: url(./fonts/mono-italic.woff);
 }
 
+* {
+    transition: all 0.2s ease;
+}
+
+body {
+background: linear-gradient(122deg, rgba(64, 205, 183, 1) 0%, rgba(64, 205, 183, 1) 50%, rgba(0, 0, 0, 1) 50%, rgba(54, 178, 159, 1) 50%, rgba(54, 178, 159, 1) 100%);
+height: 100vh;
+}
+
 h1 {
     text-align: center;
 }
@@ -23,7 +32,7 @@ h1 {
     position: relative;
     border-radius: 10px;
     border-bottom: 10px inset #f1d596;
-    border-top: 50px outset #f1d596;
+    border-top: 50px outset #f5e1b4;
 }
 
 #signed {
@@ -102,7 +111,6 @@ h1 {
     border-right: 0;
     text-align: center;
     outline: none;
-    transition: all 0.2s ease;
 }
 
 #special button:hover {
@@ -135,7 +143,6 @@ h1 {
     border-right: 0;
     text-align: center;
     outline: none;
-    transition: all 0.2s ease;
 }
 
 #numbers button:hover {
