--- a/dom-projects/calculator-basics/style2.css
+++ b/dom-projects/calculator-basics/style2.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Orbitron&display=swap');
+
 @font-face {
     font-family: "mono";
     src: url(./fonts/mono.woff);
