--- a/dom-projects/form/css/style3.css
+++ b/dom-projects/form/css/style3.css
@@ -57,7 +57,7 @@ h1 {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin: 50px 0 25px 0;
+    margin: 50px 0 0 0;
     font-size: 16px;
     align-items: center;
 }
@@ -76,7 +76,7 @@ h1 {
     justify-content: space-between;
     align-items: center;
     font-size: 16px;
-    margin-bottom: 25px;
+    margin: 30px 0 0 0;
 }
 
 .birthday {
@@ -86,13 +86,14 @@ h1 {
     border-radius: 5px;
     border: 1px solid #d0d0d0;
     font-size: 16px;
+    background-color: white;
 }
 
 #footer-btn {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 .btn {
