--- a/dom-projects/form/css/style.css
+++ b/dom-projects/form/css/style.css
@@ -4,7 +4,7 @@
 * {
     box-sizing: border-box;
     font-family: 'Quicksand',
-    sans-serif;
+        sans-serif;
 }
 
 body {
@@ -22,21 +22,21 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 10px;
-    box-shadow: #e4e4e4 0px 0px 10px 0px;
     border: 5px solid white;
     display: flex;
     background-color: white;
 }
 
-#wrap > div {
+#wrap>div {
     width: 50%;
+    background-color: white;
     text-align: center;
     font-size: 20px;
     height: auto;
 }
 
 #wrap-part-1 {
-    margin: 100px 0;
+    margin: 100px 0; 
 }
 
 #part-2 {
@@ -62,6 +62,8 @@ body {
     border-radius: 999px;
     outline: 0;
     cursor: pointer;
+    overflow: hidden;
+    position: relative;
 }
 
 #new-user-text {
@@ -72,10 +74,46 @@ body {
     margin-bottom: 25px;
 }
 
+.sub-btn {
+    background-color: white !important;
+    border: 2px solid #2e2a48 !important;
+    color: black !important;
+}
+
+.wrap-animation {
+    border-radius: 0px !important;
+    border: 0 !important;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) !important;
+    background-color: rgba(0, 0, 0, 0) !important;
+}
+
+.part-2-animation {
+    height: 100% !important;
+    position: absolute !important;
+    animation: moveToRight 2s 1s ease both;
+    left: 0;
+    top: 0;
+    border-radius: 0 10px 10px 0;
+    border: 5px solid white;
+}
+
+@keyframes moveToRight {
+    from {
+        transform: translateX(0)
+    }
+
+    to {
+        transform: translateX(100%)
+    }
+}
+
 @media only screen and (max-width: 600px) {
     #part-2 {
         display: none;
     }
+
     #part-1 {
         width: 100% !important;
     }
