--- a/dom-projects/form/css/style.css
+++ b/dom-projects/form/css/style.css
@@ -99,6 +99,10 @@ body {
     border: 5px solid white;
 }
 
+.part-1-animation {
+    border-radius: 10px 0 0 10px;
+}
+
 @keyframes moveToRight {
     from {
         transform: translateX(0)
