--- a/dom-projects/form/css/style.css
+++ b/dom-projects/form/css/style.css
@@ -66,6 +66,27 @@ body {
     position: relative;
 }
 
+.btn div {
+    transition: transform 0.3s ease-in-out;
+}
+
+.btn:hover div {
+    transform: translate(100%, 0);
+}
+
+.btn::before {
+    content: "Click here";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    transition: transform 0.3s ease-in-out;
+    transform: translate(-100%, 0);
+}
+
+.btn:hover:before {
+    transform: translate(0, 0);
+}
+
 #new-user-text {
     padding-top: 0;
 }
