--- a/memory-card/style.css
+++ b/memory-card/style.css
@@ -3,56 +3,96 @@
 }
 
 body {
-    background-image: url(https://wallpaperaccess.com/full/94706.jpg);
+    background-image: url(bg.png);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .container {
-    max-width: 1200px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    max-width: 1000px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    align-items: center;
+    grid-gap: 15px;
     margin: auto;
 }
 
 .card-wrapper {
     margin-bottom: 10px;
+    width: auto;
+    height: auto;
 }
 
 .card {
     position: relative;
+    height: auto;
+    cursor: pointer;
 }
 
 .card img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
-.front, .back {
+.front,
+.back {
     transition: all 0.3s ease;
 }
 
 .back {
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
     backface-visibility: hidden;
+    transform: rotateY(180deg);
 }
 
 .flip .back {
-    transform: rotateY(180deg);
+    transform: rotateY(0deg);
 }
 
 .front {
-    transform: rotateY(180deg);
+    transform: rotateY(0deg);
 }
 
 .flip .front {
-    transform: rotateY(0deg);
+    transform: rotateY(180deg);
 }
 
 .disappear {
     opacity: 0;
     transition: all 0.5s;
     cursor: default;
+    visibility: hidden;
+}
+
+#start-box {
+    width: 400px;
+    height: 300px;
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-image: url(start-box-bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: opacity 0.5s ease;
+}
+
+#overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+#overlay button {
+    position: absolute;
+    z-index: 1;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
